name:                aoc
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/mthadley/aoc2017#readme
license:             BSD3
license-file:        LICENSE
author:              Michael Hadley
maintainer:          mikethadley@gmail.com
copyright:           2017 Michael Hadley
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable aoc
  hs-source-dirs:      src
  main-is:             Main.hs
  other-modules:       Day1
                      , Day2
                      , Day3
                      , Day4
                      , Day5
                      , Day6
                      , Day7
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                      , vector
                      , containers
